tests/fixtures/flow/mermaid/positive/flowchart_td_quoted_labels.mmd
flowchart TD
A["literal semicolon %% | click href"] -->|safe label| B[`Markdown **label**`]
