tests/fixtures/flow/mermaid/negative/html_label.mmd
flowchart TD
A["<b>Review</b>"] --> B
